fixed some spelling errors and cleaned up code spacing

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -15,7 +15,7 @@ header {
 }
 
 header h1 {
-    font-wight: bold;
+    font-weight: bold;
     font-size: 36px;
     color: #fce138;
     margin: 0;
